fixed images and contact page

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,10 @@ format: blog-index
 # Don't index these pages dear Google.
 noindex: true
 ---
+
 <div class="row">
+	<p></p>
+	<h2>Check back soon for my blog posts!</h2>
 	<div class="medium-8 columns t30">
 		{% include _pagination.html %}
 	</div><!-- /.medium-7.columns -->
