--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -83,17 +83,17 @@ $topbar-link-color-hover: #000;
 $topbar-link-color-active: #000;
 $topbar-link-color-active-hover: #000;
 
-$topbar-dropdown-label-color: $ci-2;
+$topbar-dropdown-label-color: #80bfff;
 $topbar-dropdown-link-bg-hover: #3399CC;
 
 $topbar-link-bg-active: #80bfff; // Active Navigation Link
-$topbar-link-bg-hover: $ci-2;
+$topbar-link-bg-hover: #80bfff;
 $topbar-link-bg-active-hover: #3399CC;
 
 
 $topbar-dropdown-bg: $ci-6; // Background Mobile Navigation
 $topbar-dropdown-link-color: #000;
-$topbar-dropdown-link-bg: $ci-2;
+$topbar-dropdown-link-bg: #80bfff;
 
 $topbar-menu-link-color-toggled: $ci-1;
 $topbar-menu-icon-color-toggled: $ci-1;
