--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -21,7 +21,7 @@
 {% endcapture %}<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }}</title>
-	<link rel="shortcut icon" href="/favicon.ico?v=2">	
+	<link rel="shortcut icon" href="/favicon-32x32.ico?v=2">	
 	<link rel="stylesheet" type="text/css" href="{{ url }}/assets/css/styles_feeling_responsive.css">
 	<script src="{{ url }}/assets/js/modernizr.min.js"></script>
 
