--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -9,6 +9,9 @@ format: frontpage
     </div><!-- /.row -->
 </div><!-- /#header-home -->
 
+<div class="row t30" >
+    {{ content }}
+</div><!-- /.row -->
 
 {% comment %}
 *
@@ -107,8 +110,6 @@ format: frontpage
 * Finally, if there is content, spit it out.
 *
 {% endcomment %}
-
-<div class="row">
-    {{ content }}
-</div><!-- /.row -->
 {% endcomment %}
+
+
